<resources>
    <string name="app_name">Android Login Register</string>

    <string name="hello_world">Android Login Register</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="username_hint">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
</resources>